<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
    <item
        android:id="@+id/iteSearch"
        android:title="@string/title_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>
    <item
    -->
    <item
        android:id="@+id/iteReset"
        android:title="@string/title_reset"
        android:icon="@drawable/ic_reset"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/iteHelp"
        android:title="@string/title_Help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/iteAboutOf"
        android:title="@string/title_AboutOf" />
    <item
        android:id="@+id/iteExit"
        android:title="@string/title_ite_exit" />
    <item
        android:id="@+id/iteTransparent"
        android:title="@string/iteTransparent" />
    <item
        android:id="@+id/iteSemiTransparent"
        android:title="@string/iteSemiTransparent" />
    <item
        android:id="@+id/iteOpaque"
        android:title="@string/iteOpaque" />
    <item
        android:id="@+id/iteBlack"
        android:title="@string/iteBlack" />
    <item
        android:id="@+id/iteWhite"
        android:title="@string/iteWhite" />
    <item
        android:id="@+id/iteRed"
        android:title="@string/iteRed" />
    <item
        android:id="@+id/iteBlue"
        android:title="@string/iteBlue" />
    <item
        android:id="@+id/iteCyan"
        android:title="@string/iteCyan" />
    <item
        android:id="@+id/iteMagenta"
        android:title="@string/iteMagenta" />
    <item
        android:id="@+id/iteYellow"
        android:title="@string/iteYellow" />
    <item
        android:id="@+id/iteGreen"
        android:title="Green" />


</menu>